[gd_scene load_steps=15 format=3 uid="uid://d34d7la0sj61k"]

[ext_resource type="Script" path="res://Scripts/fear_enemy.gd" id="1_kab5y"]
[ext_resource type="Texture2D" uid="uid://bfu06vfrhcf2v" path="res://Art/mindefense1.png" id="2_nd2oh"]
[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="3_wup2w"]
[ext_resource type="AudioStream" uid="uid://buxg0rq5nb7uf" path="res://Sound/fear_death.wav" id="4_7g6l5"]
[ext_resource type="AudioStream" uid="uid://wbia1g213qn0" path="res://Sound/fear_hit.wav" id="5_wn6ct"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5tw8v"]
atlas = ExtResource("2_nd2oh")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2afu"]
atlas = ExtResource("2_nd2oh")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxu18"]
atlas = ExtResource("2_nd2oh")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq412"]
atlas = ExtResource("2_nd2oh")
region = Rect2(112, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u6m1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tw8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2afu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxu18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq412")
}],
"loop": true,
"name": &"flying",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vrnd5"]
resource_name = "Swell"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_ho0tb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wir4f"]
_data = {
"RESET": SubResource("Animation_ho0tb"),
"Swell": SubResource("Animation_vrnd5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vh72f"]
radius = 9.05539

[node name="fear_enemy" type="Area2D" groups=["enemy"]]
z_index = 10
collision_mask = 0
script = ExtResource("1_kab5y")
speed = 10
max_health = 100
health_height = 2
health_loss_speed = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u6m1n")
animation = &"flying"
autoplay = "flying"
frame_progress = 0.285565

[node name="SwellEffect" type="AnimationPlayer" parent="AnimatedSprite2D"]
autoplay = "Swell"
libraries = {
"": SubResource("AnimationLibrary_wir4f")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_vh72f")

[node name="HealthBar" type="ColorRect" parent="."]
offset_top = -12.0
offset_right = 20.0
offset_bottom = -10.0
size_flags_horizontal = 4
color = Color(1, 0, 0, 1)
script = ExtResource("3_wup2w")
metadata/_edit_group_ = true

[node name="RemainingHealth" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 2.0
color = Color(0, 1, 0, 1)

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7g6l5")
volume_db = -5.0

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wn6ct")
volume_db = -7.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="finished" from="Death" to="." method="_on_death_finished"]
